--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/electron-userland/electron-packager",
   "dependencies": {
     "asar": "^0.10.0",
+    "cptar": "^1.0.1",
     "electron-download": "^2.0.0",
     "electron-osx-sign": "^0.3.0",
     "extract-zip": "^1.0.3",
@@ -26,7 +27,6 @@
     "minimist": "^1.1.1",
     "mkdirp": "^0.5.0",
     "mv": "^2.0.3",
-    "ncp": "^2.0.0",
     "object-assign": "^4.0.1",
     "plist": "^1.1.0",
     "rcedit": "^0.3.0",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "coveralls": "^2.11.6",
+    "ncp": "^2.0.0",
     "nyc": "^5.6.0",
     "rcinfo": "^0.1.3",
     "run-waterfall": "^1.1.1",
